--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,7 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+
+logging:
+  level:
+    org.hibernate.type.descriptor: trace
