--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,7 +2,16 @@ spring:
   profiles: local 
 
   jpa:
+    generate-ddl: true
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     properties:
       hibernate:
         show_sql: true
         format_sql: true
+        ddl-auto: validate
+  
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/gongdb-admin?serverTimezone=UTC&characterEncoding=UTF-8
+    username: root
+    password: my-secret-pw
