Feat: 공고 API 변경 및 파일 다운로드 기능 추가

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -13,3 +13,6 @@ spring:
     url: jdbc:mysql://localhost:3306/gongdb-admin?serverTimezone=UTC&characterEncoding=UTF-8
     username: root
     password: my-secret-pw
+
+file:
+  path: /files
