--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '2.4.5'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+  	id "org.asciidoctor.convert" version "1.5.9.2"
 	id 'java'
 }
 
@@ -28,8 +29,27 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  	asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+  	testCompile 'org.springframework.restdocs:spring-restdocs-mockmvc'
+}
+
+ext { 
+    snippetsDir = file('build/generated-snippets')
 }
 
 test {
 	useJUnitPlatform()
+  	outputs.dir snippetsDir
+}
+
+asciidoctor {
+    inputs.dir snippetsDir
+    dependsOn test
+}
+
+bootJar {
+	dependsOn asciidoctor
+	from ("${asciidoctor.outputDir}/html5") { 
+		into 'static/docs'
+	}
 }
